--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuDangKy/list.html
@@ -10,46 +10,55 @@
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-<div class="container my-5">
+<div class="container-fluid my-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h1 class="my-4">DANH SÁCH PHIẾU ĐĂNG KÝ</h1>
-        <a class="btn btn-success mb-4" th:href="@{/PhieuKetQuas/cuocThiId/{id}(id=${cuocThiId})}">Kết quả chi tiết</a>
+        <div>
+            <a class="btn btn-success mb-4" th:href="@{/PhieuKetQuas/cuocThiId/{id}(id=${cuocThiId})}">Kết quả chi tiết</a>
+            <a class="btn btn-info mb-4" th:href="@{/PhieuKetQuas/thongke/cuocThiId/{id}(id=${cuocThiId})}">Thống kê chi tiết</a>
+        </div>
     </div>
-    <table class="table table-striped table-hover">
-        <thead>
-        <tr>
-            <th>Mã phiếu</th>
-            <th>Cuộc thi</th>
-            <th>Họ và tên</th>
-            <th>Email</th>
-            <th>SDT</th>
-            <th>Trường</th>
-            <th>Điểm</th>
-            <th>Thao tác</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="phieuDangKy : ${phieuDangKys}">
-            <td th:text="${phieuDangKy.id}"></td>
-            <td th:text="${phieuDangKy.cuocThi.getTenCuocThi()}"></td>
-            <td th:text="${phieuDangKy.user.getHoten()}"></td>
-            <td th:text="${phieuDangKy.getEmail()}"></td>
-            <td th:text="${phieuDangKy.getSdt()}"></td>
-            <td th:text="${truongService.findTruongById(phieuDangKy.getTruongId()).getTenTruong()}"></td>
-            <td th:text="${phieuKetQuaService.getDiemByCuocThiIdvaUserId(phieuDangKy.cuocThi.id, phieuDangKy.user.id)}"></td>
-            <td>
-                <a class="btn btn-primary btn-dangky"
-                   th:href="@{/PhieuDangKys/edit/{id}(id=${phieuDangKy.id})}">Sửa</a>
-                <a class="btn btn-primary btn-dangky"
-                   th:if="${phieuKetQuaService.getDiemByCuocThiIdvaUserId(phieuDangKy.cuocThi.id, phieuDangKy.user.id)} == null"
-                   th:href="@{/PhieuKetQuas/add/pkq/pdkId/{id}(id=${phieuDangKy.id})}">Nhập điểm</a>
-                <a class="btn btn-primary btn-dangky"
-                   th:unless="${phieuKetQuaService.getDiemByCuocThiIdvaUserId(phieuDangKy.cuocThi.id, phieuDangKy.user.id)} == null"
-                   th:href="@{/PhieuKetQuas/edit/pkq/pdkId/{id}(id=${phieuDangKy.id})}">Sửa điểm</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Mã phiếu</th>
+                <th>Cuộc thi</th>
+                <th>CCCD</th>
+                <th>Họ và tên</th>
+                <th>Email</th>
+                <th>SDT</th>
+                <th>Trường</th>
+                <th>Điểm</th>
+                <th>Thao tác</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="phieuDangKy : ${phieuDangKys}">
+                <td th:text="${phieuDangKy.id}"></td>
+                <td th:text="${phieuDangKy.cuocThi.getTenCuocThi()}"></td>
+                <td th:text="${phieuDangKy.user.getCccd()}"></td>
+                <td th:text="${phieuDangKy.user.getHoten()}"></td>
+                <td th:text="${phieuDangKy.getEmail()}"></td>
+                <td th:text="${phieuDangKy.getSdt()}"></td>
+                <td th:text="${truongService.findTruongById(phieuDangKy.getTruongId()).getTenTruong()}"></td>
+                <td th:text="${phieuKetQuaService.getDiemByCuocThiIdvaUserId(phieuDangKy.cuocThi.id, phieuDangKy.user.id)}"></td>
+                <td>
+
+                        <a class="btn btn-primary btn-sm"
+                           th:href="@{/PhieuDangKys/edit/{id}(id=${phieuDangKy.id})}"> Sửa thông tin</a>
+                        <a class="btn btn-primary btn-sm"
+                           th:if="${phieuKetQuaService.getDiemByCuocThiIdvaUserId(phieuDangKy.cuocThi.id, phieuDangKy.user.id)} == null"
+                           th:href="@{/PhieuKetQuas/add/pkq/pdkId/{id}(id=${phieuDangKy.id})}">Nhập điểm</a>
+                        <a class="btn btn-primary btn-sm"
+                           th:unless="${phieuKetQuaService.getDiemByCuocThiIdvaUserId(phieuDangKy.cuocThi.id, phieuDangKy.user.id)} == null"
+                           th:href="@{/PhieuKetQuas/edit/pkq/pdkId/{id}(id=${phieuDangKy.id})}">Sửa điểm</a>
+
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 <th:block th:replace="~{layout::footer}"></th:block>
 </body>
