--- a/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
@@ -87,7 +87,7 @@
                         </a>
                     </li>
                     <li class="nav-item" sec:authorize="hasAnyAuthority('USER', 'OIDC_USER')">
-                        <a class="nav-link" href="/CuocThis/User">
+                        <a class="nav-link" href="/PhieuKetQuas/search">
                             Tra kết quả
                         </a>
                     </li>
