--- a/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/search.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/PhieuKetQua/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Danh sách phiếu đăng ký</title>
+    <title>DANH SÁCH PHIẾU KẾT QUẢ</title>
     <th:block th:replace="~{layout::link-css}"></th:block>
     <th:block th:replace="~{layout::custom-css}"></th:block>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -10,35 +10,33 @@
 <th:block th:replace="~{layout::header}"></th:block>
 
 <div class="container my-5">
-    <h2 class="mb-4">Danh sách phiếu đăng ký</h2>
+    <h2 class="mb-4">Danh sách phiếu kết quả</h2>
 
-    <div th:if="${phieuDangKys != null}">
+    <div th:if="${phieuKetQuas != null}">
         <table class="table table-striped">
             <thead>
             <tr>
                 <th>Mã phiếu</th>
                 <th>CCCD</th>
                 <th>Họ và tên</th>
-                <th>Tên cuộc thi</th>
-                <th>Môn thi</th>
-                <th>Ngày thi</th>
-                <th>Địa điểm thi</th>
+                <th>Trường</th>
+                <th>Điểm</th>
+                <th>Thời gian</th>
                 <th>Thao tác</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="pdk : ${phieuDangKys}">
-                <td th:text="${pdk.id}"></td>
-                <td th:text="${pdk.user.cccd}"></td>
-                <td th:text="${pdk.user.hoten}"></td>
-                <td th:text="${pdk.cuocThi.tenCuocThi}"></td>
-                <td th:text="${pdk.cuocThi.monThi.tenMonThi}"></td>
-                <td th:text="${#temporals.format(pdk.cuocThi.ngayThi, 'dd/MM/yyyy HH:mm')}"></td>
-                <td th:text="${pdk.cuocThi.diaDiemThi}">
+            <tr th:each="phieuKetQua : ${phieuKetQuas}">
+                <td th:text="${phieuKetQua.id}"></td>
+                <td th:text="${phieuKetQua.phieuDangKy.user.cccd}"></td>
+                <td th:text="${phieuKetQua.phieuDangKy.user.getHoten()}"></td>
+                <td th:text="${phieuKetQua.phieuDangKy.user.getTruong().getTenTruong()}"></td>
+                <td th:text="${phieuKetQua.diem}"></td>
+                <td th:text="${phieuKetQua.phut} + ':' + ${phieuKetQua.giay}"></td>
                 <td>
-                <a class="btn btn-primary btn-sm"
-                   th:href="@{/PhieuDangKys/details/{id}(id=${pdk.id})}">Xem thông tin</a>
-            </td>
+                    <a class="btn btn-primary btn-sm"
+                       th:href="@{/PhieuKetQuas/cuocThiId/{id}(id=${phieuKetQua.phieuDangKy.cuocThi.id})}">kết quả cuộc thi</a>
+                </td>
             </tr>
             </tbody>
         </table>
