--- a/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
@@ -1,25 +1,241 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initialscale=1.0">
-    <title>ỨNG DỤNG HỖ TRỢ CUỘC THI</title>
-    <th:block th:replace="~{layout::link-css}"></th:block>
-    <th:block th:replace="~{layout::custom-css}"></th:block>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+    <title>Dashboard</title>
+    <!-- Include CSS files -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .management-board {
+            background-color: #f5f5f5;
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .management-board h1 {
+            text-align: center;
+            margin-bottom: 2rem;
+            font-size: 2.5rem;
+            font-weight: bold;
+        }
+
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 20px;
+            max-width: 1000px;
+        }
+
+        .card {
+            background-color: white;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            flex-basis: calc(33.33% - 1rem);
+            margin-bottom: 1rem;
+            text-decoration: none;
+            color: inherit;
+            max-width: 330px;
+        }
+
+        .card-content {
+            display: flex;
+            align-items: center;
+            padding: 1.2rem;
+            max-width: 330px;
+        }
+
+        .card-item {
+            flex-grow: 1;
+        }
+
+        .card-title, .card-text {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+        }
+
+        .card-value {
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        .new-members-notification {
+            color: #4CAF50;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+
+        .card-image {
+        }
+
+        .card-image img {
+            max-width: 90px;
+        }
+
+        #BieuDo {
+            background-color: #f8f9fa;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            max-width: 1000px;
+            max-height: 500px;
+            margin-bottom: 1rem;
+        }
+    </style>
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-<div class="container my-5">
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                TRANG CHỦ ỨNG DỤNG QUẢN LÝ SÁCH - KẾT NỐI CSDL MYSQL
-            </a>
+
+<div class="management-board">
+    <h1>BẢNG THỐNG KÊ</h1>
+    <div class="card-container">
+        <div class="card" style="cursor: pointer;">
+            <div class="card-content">
+                <div class="card-item">
+                    <p class="card-title" data-card-title="Tổng thí sinh">Tổng thí sinh</p>
+                    <p class="card-text"> <span th:text="${totalUsers}"></span></p>
+                </div>
+                <div class="card-image">
+                    <img src="/images/globe.png" class="card-img-top" alt="Total Users">
+                </div>
+            </div>
+            <a id="navigateToList" href="/list" style="display: none;"></a>
         </div>
-    </nav>
+
+        <div class="card" style="cursor: pointer;">
+            <div class="card-content">
+                <div class="card-item">
+                    <p class="card-title" data-card-title="Tổng cuộc thi">Tổng cuộc thi</p>
+                    <p class="card-text"> <span th:text="${totalCompetitions}"></span></p>
+                </div>
+                <div class="card-image">
+                    <img src="/images/cuocthi.png" class="card-img-top" alt="Total Competitions">
+                </div>
+            </div>
+            <a id="competitionListLink" href="/CuocThis" style="display: none;"></a>
+        </div>
+
+        <div class="card">
+            <div class="card-content">
+                <div class="card-item">
+                    <p class="card-title">Tổng lượt đăng ký</p>
+                    <p class="card-text"> <span th:text="${totalRegistrations}"></span></p>
+                </div>
+                <div class="card-image">
+                    <img src="/images/ghidanh.png" class="card-img-top" alt="Total Registrations">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <canvas id="BieuDo">
+
+    </canvas>
 </div>
-<th:block th:replace="~{layout::footer}"></th:block>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    var userCountsByLoaiTruong = /*[[${userCountsByLoaiTruong}]]*/ [];
+
+    var labels = userCountsByLoaiTruong.map(function(item) {
+        return item[0]; // Assuming the first element in each row is LoaiTruong name
+    });
+
+    var data = userCountsByLoaiTruong.map(function(item) {
+        return item[1]; // Assuming the second element in each row is count of users
+    });
+
+    var ctx = document.getElementById('BieuDo').getContext('2d');
+    new Chart(ctx, {
+        type: 'pie',
+        data: {
+            labels: labels,
+            datasets: [{
+                data: data,
+                borderColor: [
+                    '#689F38', '#F57C00', '#512DA8', '#C2185B', '#388E3C',
+                    '#FFA000', '#303F9F', '#7B1FA2', '#E64A19', '#1976D2'
+                ],
+                backgroundColor: [
+                    '#8BC34A', '#FF9800', '#673AB7', '#E91E63', '#4CAF50',
+                    '#FFC107', '#3F51B5', '#9C27B0', '#FF5722', '#2196F3'
+                ],
+                borderWidth: 2
+            }]
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            plugins: {
+                title: {
+                    display: true,
+                    text: 'Biểu đồ số lượng người dùng theo loại trường',
+                    font: {
+                        size: 24,
+                        weight: 'bold'
+                    }
+                },
+                legend: {
+                    display: true,
+                    position: 'top', // Display legend on top
+                    align: 'center',
+                    labels: {
+                        font: {
+                            size: 14
+                        }
+                    }
+                },
+                datalabels: {
+                    color: '#000',
+                    anchor: 'center',
+                    align: 'center',
+                    offset: 0,
+                    font: {
+                        weight: 'bold',
+                        size: 20
+                    },
+                    formatter: (value, context) => {
+                        return value === 0 ? '' : value.toString();
+                    }
+                }
+            }
+        }
+    });
+
+
+
+    /*duong dan ra list cuoc thi da tao*/
+    document.addEventListener('DOMContentLoaded', function() {
+        // Lấy thẻ card "Tổng cuộc thi" và thêm sự kiện click
+        var totalCompetitionsCard = document.querySelector('.card-title[data-card-title="Tổng cuộc thi"]');
+        if (totalCompetitionsCard) {
+            totalCompetitionsCard.addEventListener('click', function() {
+                window.location.href = '/CuocThis';
+            });
+        }
+    });
+
+    /*duong dan ra list thi sinh*/
+    document.addEventListener('DOMContentLoaded', function() {
+        // Lấy thẻ card "Tổng cuộc thi" và thêm sự kiện click
+        var totalCompetitionsCard = document.querySelector('.card-title[data-card-title="Tổng thí sinh"]');
+        if (totalCompetitionsCard) {
+            totalCompetitionsCard.addEventListener('click', function() {
+                window.location.href = '/list';
+            });
+        }
+    });
+
+
+</script>
+
 </body>
 </html>
