--- a/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
@@ -4,22 +4,542 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
-    <title>ỨNG DỤNG HỖ TRỢ CUỘC THI</title>
+    <title>ỨNG DỤNG QUẢN LÝ SÁCH</title>
     <th:block th:replace="~{layout::link-css}"></th:block>
     <th:block th:replace="~{layout::custom-css}"></th:block>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>.advertisement-qc {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        left: 0;
+        z-index: -1;
+        opacity: 1;
+        transition: opacity 0.5s ease;
+    }
+    .page-selector-qc {
+        position: absolute;
+        bottom: 60px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+    }
+
+    .page-selector-qc button {
+        background-color: #7c8b9b;
+        border: none;
+        color: white;
+        width: 24px;
+        height: 8px;
+        cursor: pointer;
+    }
+
+    .page-selector-qc button:hover {
+        background-color: #537191;
+    }
+    /*  */
+    .div-chung {
+        padding-top: 94px;
+        padding-bottom: 50px;
+        text-align: center;
+        max-width: 1319px;
+        margin: 0 auto;
+        padding: 10px 120px 0px 120px;
+    }
+    .div-70 {
+        display: flex;
+    }
+    .div-30 {
+        padding-left: 4.1666666667%;
+    }
+    .div-trai {
+        height: auto;
+        background: #fff;
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
+        border-radius: 0 0 0 20px;
+        transition: all 0.3s ease;
+        overflow: hidden;
+    }
+    .div-phai {
+        position: relative;
+        overflow: hidden;
+        padding: 25px 36px 5px 32px;
+        background: #fff;
+        box-shadow: 0 5px 20px rgba(96, 110, 143, 0.15);
+        border-radius: 0 20px 0 0;
+    }
+    .p-tt {
+        text-align: center;
+        font-size: 30px;
+        padding: 10px;
+        margin-top: 70px;
+        font-size: 35px;
+        font-weight: 600;
+    }
+    .div-tt {
+        position: relative;
+        display: inline-bock;
+        padding: 0 32px;
+        height: 48px;
+        background: #11579f;
+        border-radius: 0 10px;
+        font-family: Gotham-Medium\.otf;
+        font-size: 14px;
+        line-height: 48px;
+        color: #fff;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        overflow: hidden;
+        text-align: center; /* Canh giữa nội dung */
+        vertical-align: middle; /* Canh giữa theo chiều dọc */
+        margin-left: 43%;
+    }
+
+    .sticker {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+        font-size: 12px;
+        line-height: 18px;
+        color: #6e798c;
+        margin: 10px 25px;
+    }
+    .sticker {
+        position: relative;
+        text-align: center;
+    }
+
+    .img-sticker {
+        display: inline-block; /* Đảm bảo hình ảnh nằm trên cùng và có thể canh lề trái */
+    }
+    .img-sticker img {
+        width: auto; /* Chiều rộng của hình ảnh là 100% của phần tử cha (img-sticker) */
+        height: 220px; /* Chiều cao tự động dựa trên tỷ lệ hình ảnh */
+    }
+    h3 {
+        font-family: BeVietnam-SemiBold\.ttf;
+        font-size: 18px;
+        line-height: 24px;
+        color: #393939;
+        -webkit-line-clamp: 2;
+        height: 52px;
+        height: auto;
+        max-height: 52px;
+        margin-bottom: 10px;
+        text-align: left;
+    }
+    footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+    body {
+        /* background-image: url("../images/background.png"); */
+        background-size: cover;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 15px;
+    }
+    .container {
+        max-width: 960px;
+        margin: 0px auto;
+    }
+    .header {
+        background-color: #164b9b;
+        display: flex;
+        height: 50px;
+    }
+    nav {
+        display: flex;
+    }
+    #logo {
+        width: 180px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #fff;
+        border-radius: 0 0 20px 0;
+        transition: all 0.3s ease;
+    }
+    .main-menu {
+        display: flex;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+    #main-menu li {
+        position: relative;
+    }
+    .main-menu li a {
+        color: white;
+        display: block;
+        padding: 15px 20px;
+        text-decoration: none;
+    }
+
+    .main-menu ul.sub-menu {
+        position: absolute;
+        background-color: #164b9b;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        width: 180px;
+        display: none;
+    }
+
+    .main-menu li:hover > ul.sub-menu {
+        display: block;
+    }
+    .main-menu ul.sub-menu a {
+        padding: 15px;
+    }
+    .main-menu ul.sub-menu li:hover {
+        background-color: #2360bb;
+    }
+    .main-menu > li > a {
+        position: relative;
+    }
+
+    .main-menu > li > a::before {
+        content: "";
+        height: 2px;
+        width: 0px;
+        background: #fff;
+        position: absolute;
+        bottom: 0px;
+        left: 0px;
+        transition: 0.25s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    .main-menu > li:hover > a::before {
+        width: 100%;
+    }
+    .main-menu > li.has-child::after {
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
+        content: "\f107";
+        color: #fff;
+        position: absolute;
+        top: 0px;
+        padding-left: 0px;
+        padding: 23px 73px;
+    }
+
+    /*  */
+    ._all_field {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .wrap {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+        z-index: 3;
+        height: 88px;
+        width: 1000px;
+        background: #fff;
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
+        border-radius: 0 10px 0 0;
+        margin-top: -44px;
+        display: flex;
+        align-items: center;
+    }
+
+    .wrap,
+    select#test_type,
+    input#start_date,
+    input#end_date,
+    select#location {
+        border: none;
+        border-bottom: 1px solid #d6d6d6;
+    }
+    input#start_date,
+    input#end_date {
+        width: 80px;
+    }
+    select#location {
+        margin-left: 50px;
+    }
+    ._frm_gr {
+        display: inline-block;
+        flex: 1;
+        margin-right: 10px;
+        width: 200px;
+    }
+    label#tg-den {
+        margin: 10px;
+    }
+    label {
+        display: block;
+        margin-bottom: 5px;
+    }
+
+    .item {
+        width: 80%;
+        padding: 8px;
+    }
+
+    .date_range {
+        width: calc(70% - 5px);
+        padding: 0px 8px;
+        height: 33px;
+    }
+
+    #h_daterangepicker {
+        display: flex;
+    }
+
+    #h_daterangepicker p {
+        margin: 0 5px;
+    }
+    div#show_frm,
+    div#tg-den {
+        padding: 10px;
+    }
+    div#show_frm {
+        width: 210px;
+        padding: 0px 44px;
+        color: #11579f;
+        font-weight: 600;
+    }
+    .search_button {
+        width: 100px;
+        height: 100%;
+        background: #11579f;
+        border-radius: 0 10px;
+        font-family: BeVietnam-Bold\.ttf;
+        font-size: 20px;
+        line-height: 26px;
+        margin-left: auto;
+        text-align: center;
+        text-transform: uppercase;
+        color: #fff;
+        border: 0;
+        box-shadow: none;
+        outline: none;
+        cursor: pointer;
+    }
+    section {
+        background-size: cover; /* Cover the entire section */
+        background-attachment: fixed; /* Fix the background position */
+        height: 100vh; /* Set height to 100% of viewport height */
+        position: relative;
+    }
+    .section2 {
+        background-image: url("../images/background.png");
+        height: 600px;
+    }
+    .section3 {
+        background-image: url("../images/background1.png");
+        position: absolute;
+        width: 91.6666666667%;
+        height: 700px;
+        border-radius: 0px 150px 0px 0px;
+    }
+    .img-31 {
+        width: 100%; /* Đảm bảo hình ảnh lấp đầy không gian của phần tử cha */
+        height: auto; /* Chiều cao tự động dựa trên tỷ lệ khung hình ban đầu */
+    }
+
+    .img-30 img {
+        width: 100%; /* Đảm bảo hình ảnh lấp đầy không gian của phần tử cha */
+        height: auto; /* Chiều cao tự động dựa trên tỷ lệ khung hình ban đầu */
+    }
+    .p-sc3 {
+        text-align: left;
+        font-size: 30px;
+        padding: 10px;
+        font-weight: 700;
+        color: white;
+        font-size: 35px;
+    }
+    .div-phai-sc3 {
+        position: relative;
+        overflow: hidden;
+        padding: 25px 36px 5px 32px;
+        box-shadow: 0 5px 20px rgba(96, 110, 143, 0.15);
+        border-radius: 0 20px 0 0;
+    }
+    .sticker-sc3 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+        font-size: 17px;
+        line-height: 15px;
+        color: white;
+    }
+    .sticker-sc3 {
+        position: relative;
+        text-align: center;
+    }
+    .div-sc3 {
+        font-size: 15px;
+        margin: 50px 0px;
+        text-align: left;
+        color: white;
+        line-height: 1.5;
+    }
+    .div-bt-sc3 {
+        position: relative;
+        padding: 0 32px;
+        height: 48px;
+        background: #11579f;
+        border-radius: 0 10px;
+        font-size: 14px;
+        line-height: 48px;
+        color: #fff;
+        text-decoration: none;
+        transition: all 0.3s ease;
+        overflow: hidden;
+        margin-left: 43%;
+        width: 150px;
+        border: none;
+    }</style>
 </head>
 <body>
 <th:block th:replace="~{layout::header}"></th:block>
-<div class="container my-5">
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                TRANG CHỦ ỨNG DỤNG QUẢN LÝ SÁCH - KẾT NỐI CSDL MYSQL
-            </a>
+<div class="wrapper">
+    <section class="section1">
+        <div class="container-qc">
+            <img
+                    class="advertisement-qc"
+                    src="../images/anh1.jpg"
+                    alt="Advertisement 1"
+            />
+            <img
+                    class="advertisement-qc"
+                    src="images/anh2.png"
+                    alt="Advertisement 2"
+            />
+            <img
+                    class="advertisement-qc"
+                    src="images/imagett.jpg"
+                    alt="Advertisement 3"
+            />
+            <img
+                    class="advertisement-qc"
+                    src="images/anh2.png"
+                    alt="Advertisement 4"
+            />
+            <img
+                    class="advertisement-qc"
+                    src="images/imagett.jpg"
+                    alt="Advertisement 5"
+            />
+            <!-- Thêm các hình ảnh quảng cáo khác cần hiển thị -->
+            <div class="page-selector-qc">
+                <button onclick="showAdvertisement(0)"></button>
+                <button onclick="showAdvertisement(1)"></button>
+                <button onclick="showAdvertisement(2)"></button>
+                <button onclick="showAdvertisement(3)"></button>
+                <button onclick="showAdvertisement(4)"></button>
+                <!-- Thêm các nút cho các trang khác nếu cần -->
+            </div>
         </div>
-    </nav>
+    </section>
+    <section class="section2">
+        <div style="width: 100%">
+            <div>
+                <p class="p-tt">Quy Định thi</p>
+            </div>
+            <div class="div-chung" style="display: flex">
+                <div class="div-trai" style="width: 380px; margin-right: 30px">
+                    <div class="img-sticker">
+                        <img src="../images/anha.jfif" alt="" />
+                    </div>
+                    <div style="text-align: center; padding: 10px 20px 20px 20px">
+                        <p>
+                            Quy định phòng cháy chữa cháy
+                        </p>
+                    </div>
+                </div>
+                <div class="div-trai" style="width: 380px; margin-right: 30px">
+                    <div class="img-sticker">
+                        <img src="../images/anhb.jfif" alt="" />
+                    </div>
+                    <div style="text-align: center; padding: 20px">
+                        <p>
+                            Quy định đi đúng giờ
+                        </p>
+                    </div>
+                </div>
+                <div class="div-trai" style="width: 380px; margin-right: 30px">
+                    <div class="img-sticker">
+                        <img src="../images/anhc.jfif" alt="" />
+                    </div>
+                    <div style="text-align: center; padding: 20px">
+                        <p>
+                            Quy định làm bài thi
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
 </div>
-<th:block th:replace="~{layout::footer}"></th:block>
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<script>
+    $(document).ready(function () {
+        $(".sub-menu").parent("li").addClass("has-child");
+    });
+    //
+    var advertisements = document.querySelectorAll(".advertisement-qc");
+    var currentPage = 0;
+
+    function showAdvertisement(pageIndex) {
+        if (pageIndex !== currentPage) {
+            advertisements[currentPage].style.opacity = "0";
+            advertisements[pageIndex].style.opacity = "1";
+            currentPage = pageIndex;
+        }
+    }
+
+    function nextAdvertisement() {
+        var nextPage = (currentPage + 1) % advertisements.length;
+        showAdvertisement(nextPage);
+    }
+
+    // Kiểm tra nếu có quảng cáo trong trang
+    if (advertisements.length > 0) {
+        // Hiển thị quảng cáo đầu tiên
+        advertisements[currentPage].style.opacity = "1";
+        setInterval(nextAdvertisement, 2000);
+    } else {
+        console.log("Không có quảng cáo nào được tìm thấy.");
+    }
+    window.addEventListener('DOMContentLoaded', function() {
+        const divs = document.querySelectorAll('.div-trai');
+        const interval = 2000; // 3 seconds
+        let index = 0;
+
+        function rotateDivs() {
+            divs.forEach(div => {
+                div.style.display = 'none'; // Ẩn tất cả các div
+            });
+
+            // Hiển thị chỉ 3 div mỗi lần
+            for (let i = index; i < index + 3; i++) {
+                if (i < divs.length) {
+                    divs[i].style.display = 'block';
+                } else {
+                    divs[i - divs.length].style.display = 'block';
+                }
+            }
+
+            index = (index + 1) % divs.length;
+        }
+
+        rotateDivs();
+        setInterval(rotateDivs, interval);
+    });
+</script>
 </body>
 </html>
