--- a/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/Home/index.html
@@ -541,5 +541,6 @@
         setInterval(rotateDivs, interval);
     });
 </script>
+<th:block th:replace="~{layout::footer}"></th:block>
 </body>
 </html>
