--- a/HeThongHoTroCuocThi/src/main/resources/templates/User/list.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/User/list.html
@@ -20,7 +20,7 @@
             <th>CCCD</th>
             <th>UserName</th>
             <th>Họ và tên</th>
-            <th>Số điện thoại/th>
+            <th>Số điện thoại</th>
             <th>Email</th>
             <th>Trường</th>
         </tr>
