--- a/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
+++ b/HeThongHoTroCuocThi/src/main/resources/templates/layout.html
@@ -91,6 +91,11 @@
                             Tra kết quả
                         </a>
                     </li>
+                    <li class="nav-item" sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a class="nav-link" href="/ThongKe">
+                            Thống kê
+                        </a>
+                    </li>
                     <li class="nav-item" sec:authorize="isAuthenticated()">
                         <a class="nav-link" href="/User/edit">
                             Thông tin
